--- a/list_comprehension/list_comprehension.ipynb
+++ b/list_comprehension/list_comprehension.ipynb
@@ -58,6 +58,156 @@
     "arr = [[i for i in range(3)] for j in range(3)]\n",
     "print(arr)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['J', 'o', 's', 'e', 'p', 'h', ' ', 'K', 'a', 'u', 'n', 'd', 'a']\n",
+      "['J', 'o', 's', 'e', 'p', 'h', ' ', 'K', 'a', 'u', 'n', 'd', 'a']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 4. for loop vs list comprehension\n",
+    "# for loop\n",
+    "list1 = []\n",
+    "for char in 'Joseph Kaunda':\n",
+    "\tlist1.append(char)\n",
+    "\n",
+    "print(list1)\n",
+    "\n",
+    "# list comprehension\n",
+    "list2 = [char for char in 'Joseph Kaunda']\n",
+    "print(list2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0, 1, 2, 3, 4], [0, 1, 2, 3, 4], [0, 1, 2, 3, 4]]\n",
+      "[[0, 1, 2, 3, 4], [0, 1, 2, 3, 4], [0, 1, 2, 3, 4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Nested list comprehension\n",
+    "\n",
+    "# for loop\n",
+    "arr1 = []\n",
+    "\n",
+    "for i in range(3):\n",
+    "\tarr1.append([])\n",
+    "\n",
+    "\tfor j in range(5):\n",
+    "\t\tarr1[i].append(j)\n",
+    "\n",
+    "print(arr1)\n",
+    "\n",
+    "# list comprehension\n",
+    "arr2 = [[i for i in range(5)] for j in range(3)]\n",
+    "print(arr2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 20, 30, 40, 50]\n",
+      "[10, 20, 30, 40, 50]\n",
+      "[10, 20, 30, 40, 50]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# list comprehension and lambda\n",
+    "\n",
+    "# for loop\n",
+    "table1 = []\n",
+    "\n",
+    "for i in range(1, 6):\n",
+    "\ttable1.append(i*10)\n",
+    "\n",
+    "print(table1)\n",
+    "\n",
+    "# list comprehension\n",
+    "table2 = [i*10 for i in range(1,6)]\n",
+    "print(table2)\n",
+    "\n",
+    "#list comprehension + lambda function\n",
+    "list3 = list(map(lambda i: i * 10, [i for i in range(1, 6)]))\n",
+    "print(list3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Even number', 'Odd number', 'Even number', 'Odd number', 'Even number', 'Odd number', 'Even number', 'Odd number', 'Even number', 'Odd number']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# list comprehension with if-else\n",
+    "list = [\"Even number\" if i % 2 == 0 else \"Odd number\" for i in range(10)]\n",
+    "print(list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 10, 20, 30, 40, 50, 60, 70, 80, 90]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Nested IF with List Comprehension\n",
+    "\n",
+    "list = [i for i in range(100)\n",
+    "\t\tif i % 5 == 0 if i % 10 == 0]\n",
+    "\n",
+    "print(list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Transpose of 2D- Matrix.\n",
+    "twoD = [[10, 20, 30],[40, 50, 60], [70, 80, 90]]\n",
+    "trans = [[i[j] for i in twoD] for j in range(len(twoD[0]))]\n",
+    "\n",
+    "print(trans)"
+   ]
   }
  ],
  "metadata": {
