--- a/list_comprehension/list_comprehension.ipynb
+++ b/list_comprehension/list_comprehension.ipynb
@@ -198,15 +198,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[10, 40, 70], [20, 50, 80], [30, 60, 90]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Transpose of 2D- Matrix.\n",
     "twoD = [[10, 20, 30],[40, 50, 60], [70, 80, 90]]\n",
     "trans = [[i[j] for i in twoD] for j in range(len(twoD[0]))]\n",
     "\n",
     "print(trans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n",
+      "[4, 5, 6]\n",
+      "[7, 8, 9]\n",
+      "[10, 11, 12]\n",
+      "\n",
+      "\n",
+      "[1, 4, 7, 10]\n",
+      "[2, 5, 8, 11]\n",
+      "[3, 6, 9, 12]\n",
+      "for loop\n",
+      "[1, 4, 7, 10]\n",
+      "[2, 5, 8, 11]\n",
+      "[3, 6, 9, 12]\n"
+     ]
+    }
+   ],
+   "source": [
+    "m = [[1,2,3], [4,5,6], [7,8,9], [10,11,12]]\n",
+    "t = [[0, 0, 0, 0], [0, 0, 0, 0], [0, 0, 0, 0]]\n",
+    "for row in m:\n",
+    "\tprint(row)\n",
+    "trans = [[m[j][i] for j in range(len(m))] for i in range(len(m[0]))]\n",
+    "print('list comprehension')\n",
+    "for row in trans:\n",
+    "\tprint(row)\n",
+    "\n",
+    "print('for loop')\n",
+    "# for loop\n",
+    "for i in range(len(m)):\n",
+    "\tfor j in range(len(m[0])):\n",
+    "\t\tt[j][i] = m[i][j]\n",
+    "for row in t:\n",
+    "\tprint(row)"
    ]
   }
  ],
