--- a/list_comprehension/list_comprehension.ipynb
+++ b/list_comprehension/list_comprehension.ipynb
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -230,8 +230,7 @@
       "[4, 5, 6]\n",
       "[7, 8, 9]\n",
       "[10, 11, 12]\n",
-      "\n",
-      "\n",
+      "list comprehension\n",
       "[1, 4, 7, 10]\n",
       "[2, 5, 8, 11]\n",
       "[3, 6, 9, 12]\n",
@@ -259,6 +258,79 @@
     "\t\tt[j][i] = m[i][j]\n",
     "for row in t:\n",
     "\tprint(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'list' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [22], line 5\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# toggle the case of each char in str\u001b[39;00m\n\u001b[1;32m      3\u001b[0m string \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mGeeks4Geeks\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m----> 5\u001b[0m List \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39;49m(\u001b[39mmap\u001b[39;49m(\u001b[39mlambda\u001b[39;49;00m i: \u001b[39mchr\u001b[39;49m(\u001b[39mord\u001b[39;49m(i) \u001b[39m^\u001b[39;49m \u001b[39m32\u001b[39;49m), string))\n\u001b[1;32m      6\u001b[0m \u001b[39mprint\u001b[39m(List)\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'list' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "# toggle the case of each char in str\n",
+    "\n",
+    "string = 'Geeks4Geeks'\n",
+    "\n",
+    "List = list(map(lambda i: chr(ord(i) ^ 32), string))\n",
+    "print(List)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['skeeG', 'rof', 'skeeG']\n"
+     ]
+    }
+   ],
+   "source": [
+    "List = [string[::-1] for string in ('Geeks', 'for', 'Geeks')]\n",
+    "print(List)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[16, 3, 18, 18]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# sum of odd elems in list\n",
+    "\n",
+    "def digSum(n):\n",
+    "\tdsum = 0\n",
+    "\tfor elem in str(n):\n",
+    "\t\tdsum += int(elem)\n",
+    "\treturn dsum\n",
+    "\n",
+    "List = [367, 111, 562, 945, 6726, 873]\n",
+    "\n",
+    "newList = [digSum(i) for i in List if i&1]\n",
+    "\n",
+    "print(newList)"
    ]
   }
  ],
