--- a/bitswise_operators/bit_manipulation.ipynb
+++ b/bitswise_operators/bit_manipulation.ipynb
@@ -71,6 +71,29 @@
     "\n",
     "print(evenOrOdd(33))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unset\n"
+     ]
+    }
+   ],
+   "source": [
+    "# is nth bit set?\n",
+    "def setOrUnset(x:int, n:int):\n",
+    "\tif (x & (1 << n) == 0):\n",
+    "\t\treturn \"Unset\"\n",
+    "\treturn \"Set\"\n",
+    "\n",
+    "print(setOrUnset(5, 0))"
+   ]
   }
  ],
  "metadata": {
