--- a/bitswise_operators/bit_manipulation.ipynb
+++ b/bitswise_operators/bit_manipulation.ipynb
@@ -74,25 +74,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Unset\n"
+      "Set\n"
      ]
     }
    ],
    "source": [
     "# is nth bit set?\n",
     "def setOrUnset(x:int, n:int):\n",
-    "\tif (x & (1 << n) == 0):\n",
-    "\t\treturn \"Unset\"\n",
-    "\treturn \"Set\"\n",
+    "\tif (x & (1 << n)):\n",
+    "\t\treturn True\n",
+    "\treturn False\n",
     "\n",
     "print(setOrUnset(5, 0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set nth bit\n",
+    "def set_nth(x: int, p: int):\n",
+    "\treturn x | (1 << p)\n",
+    "\n",
+    "print(set_nth(2,0))"
    ]
   }
  ],
