--- a/bitswise_operators/bit_manipulation.ipynb
+++ b/bitswise_operators/bit_manipulation.ipynb
@@ -97,15 +97,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "# set nth bit\n",
     "def set_nth(x: int, p: int):\n",
     "\treturn x | (1 << p)\n",
     "\n",
     "print(set_nth(2,0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# unset nth bit\n",
+    "def unset_nth(x: int, p: int):\n",
+    "\treturn x & ~(1 << p)\n",
+    "\n",
+    "print(unset_nth(3, 0))"
    ]
   }
  ],
